--- a/styles/sections.css
+++ b/styles/sections.css
@@ -10,3 +10,59 @@ section {
     width: auto;
     overflow: hidden;
 }
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+h1 {
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+#s1, #s3 {
+    height: 100vh;
+    width: 55%;
+    background-color: #144a6b89;
+    padding: 80px;
+    clip-path: polygon(100% 0, 90% 85%, 100% 100%, 0 100%, 0 0);
+}
+
+#s2 {
+    height: 40vh;
+    width: 100vw;
+    padding: 80px;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 89%, 50% 100%, 0 90%);
+    background-color: #144a6b89;
+
+}
+
+@media(max-width: 900px) {
+    #s1, #s3 {
+        margin-top: 50vh !important;
+        width: 100vw;
+        height: 50vh !important;
+        padding: 40px 30px;
+        clip-path: polygon(50% 10%, 100% 0%, 100% 100%, 0 100%, 0 0);
+    }
+}
+
+@media(max-width: 600px) {
+    h1 {
+        font-size: 5vw;
+    }
+
+    p {
+        font-size: 4vw;
+        line-height: 5vw;
+    }
+}
