--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,14 +1,18 @@
 #container {
     width: 100%;
     height: 100vh;
-    overflow-y: scroll;
     z-index: 100;
+    
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
 }
 
 section {
     height: 100vh;
     width: auto;
     overflow: hidden;
+    scroll-snap-align: center;
 }
 
 .center {
