--- a/styles/sections.css
+++ b/styles/sections.css
@@ -12,7 +12,7 @@ section {
     height: 100vh;
     width: auto;
     overflow: hidden;
-    scroll-snap-align: center;
+    /*scroll-snap-align: center;*/
 }
 
 .center {
@@ -50,7 +50,7 @@ p {
 
 }
 
-@media(max-width: 900px) {
+@media(max-width: 1500px) {
     #s1, #s3 {
         margin-top: 50vh !important;
         width: 100vw;
