--- a/styles/main.css
+++ b/styles/main.css
@@ -1,37 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: white;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: white;
+  scroll-snap-align: center;
 }
 
 canvas {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: auto;
-    height: 100vh;
-    z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: auto;
+  height: 100vh;
+  z-index: -1;
 }
 
 ::-webkit-scrollbar {
-    width: 13px;
-    height: 6px;
+  width: 13px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 10px #144a6b;
-    border-radius: 10px;
+  box-shadow: inset 0 0 10px #144a6b;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(97, 97, 255, 0.842);
-    background-size: 30px;
-    border-radius: 10px;
+  background-color: rgba(97, 97, 255, 0.842);
+  background-size: 30px;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: rgb(135, 249, 253);
+  background-color: rgb(135, 249, 253);
 }
