--- a/styles/sections.css
+++ b/styles/sections.css
@@ -49,7 +49,7 @@ p {
   background-color: #144a6b89;
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 2000px) {
   #s1,
   #s3 {
     margin-top: 50vh !important;
@@ -60,7 +60,7 @@ p {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1500px) {
   h1 {
     font-size: 5vw;
   }
@@ -68,5 +68,25 @@ p {
   p {
     font-size: 10px;
     line-height: 5vw;
+  }
+
+  #s1,
+  #s3 {
+    margin-top: 0vh !important;
+    width: 100vw;
+    height: 100vh !important;
+    padding: 40px 30px;
+    clip-path: polygon(
+      0% 0%,
+      0% 100%,
+      0 86%,
+      0 0,
+      47% 0,
+      47% 57%,
+      0 57%,
+      0 100%,
+      100% 100%,
+      100% 0%
+    );
   }
 }
